pkgs/drbd9/drbd/.compat_test.6.3.7/before_4_13_kernel_read.stderr
<command-line>: warning: "KBUILD_MODNAME" redefined
<command-line>: note: this is the location of the previous definition
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/before_4_13_kernel_read.c: In function ‘foo’:
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/before_4_13_kernel_read.c:19:34: warning: passing argument 2 of ‘kernel_read’ makes pointer from integer without a cast [-Wint-conversion]
   19 |         return kernel_read(file, offset, addr, count);
      |                                  ^~~~~~
      |                                  |
      |                                  loff_t {aka long long int}
In file included from /home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/before_4_13_kernel_read.c:1:
/nix/store/ydgbh9sb06qr316g0j8flz83jvm2y80l-linux-6.3.7-dev/lib/modules/6.3.7/source/include/linux/fs.h:2588:43: note: expected ‘void *’ but argument is of type ‘loff_t’ {aka ‘long long int’}
 2588 | extern ssize_t kernel_read(struct file *, void *, size_t, loff_t *);
      |                                           ^~~~~~
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/before_4_13_kernel_read.c:19:42: warning: passing argument 3 of ‘kernel_read’ makes integer from pointer without a cast [-Wint-conversion]
   19 |         return kernel_read(file, offset, addr, count);
      |                                          ^~~~
      |                                          |
      |                                          char *
/nix/store/ydgbh9sb06qr316g0j8flz83jvm2y80l-linux-6.3.7-dev/lib/modules/6.3.7/source/include/linux/fs.h:2588:51: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘char *’
 2588 | extern ssize_t kernel_read(struct file *, void *, size_t, loff_t *);
      |                                                   ^~~~~~
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/before_4_13_kernel_read.c:19:48: warning: passing argument 4 of ‘kernel_read’ makes pointer from integer without a cast [-Wint-conversion]
   19 |         return kernel_read(file, offset, addr, count);
      |                                                ^~~~~
      |                                                |
      |                                                long unsigned int
/nix/store/ydgbh9sb06qr316g0j8flz83jvm2y80l-linux-6.3.7-dev/lib/modules/6.3.7/source/include/linux/fs.h:2588:59: note: expected ‘loff_t *’ {aka ‘long long int *’} but argument is of type ‘long unsigned int’
 2588 | extern ssize_t kernel_read(struct file *, void *, size_t, loff_t *);
      |                                                           ^~~~~~~~
In file included from <command-line>:
/nix/store/ydgbh9sb06qr316g0j8flz83jvm2y80l-linux-6.3.7-dev/lib/modules/6.3.7/source/include/linux/compiler_types.h:397:45: error: call to ‘__compiletime_assert_224’ declared with attribute error: BUILD_BUG_ON failed: !(__same_type(kernel_read_before_4_13, kernel_read))
  397 |         _compiletime_assert(condition, msg, __compiletime_assert_, __COUNTER__)
      |                                             ^
/nix/store/ydgbh9sb06qr316g0j8flz83jvm2y80l-linux-6.3.7-dev/lib/modules/6.3.7/source/include/linux/compiler_types.h:378:25: note: in definition of macro ‘__compiletime_assert’
  378 |                         prefix ## suffix();                             \
      |                         ^~~~~~
/nix/store/ydgbh9sb06qr316g0j8flz83jvm2y80l-linux-6.3.7-dev/lib/modules/6.3.7/source/include/linux/compiler_types.h:397:9: note: in expansion of macro ‘_compiletime_assert’
  397 |         _compiletime_assert(condition, msg, __compiletime_assert_, __COUNTER__)
      |         ^~~~~~~~~~~~~~~~~~~
/nix/store/ydgbh9sb06qr316g0j8flz83jvm2y80l-linux-6.3.7-dev/lib/modules/6.3.7/source/include/linux/build_bug.h:39:37: note: in expansion of macro ‘compiletime_assert’
   39 | #define BUILD_BUG_ON_MSG(cond, msg) compiletime_assert(!(cond), msg)
      |                                     ^~~~~~~~~~~~~~~~~~
/nix/store/ydgbh9sb06qr316g0j8flz83jvm2y80l-linux-6.3.7-dev/lib/modules/6.3.7/source/include/linux/build_bug.h:50:9: note: in expansion of macro ‘BUILD_BUG_ON_MSG’
   50 |         BUILD_BUG_ON_MSG(condition, "BUILD_BUG_ON failed: " #condition)
      |         ^~~~~~~~~~~~~~~~
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/before_4_13_kernel_read.c:18:9: note: in expansion of macro ‘BUILD_BUG_ON’
   18 |         BUILD_BUG_ON(!(__same_type(kernel_read_before_4_13, kernel_read)));
      |         ^~~~~~~~~~~~
